--- a/packages/firebase_ml_vision/pubspec.yaml
+++ b/packages/firebase_ml_vision/pubspec.yaml
@@ -12,16 +12,16 @@ dependencies:
     sdk: flutter
 
 dev_dependencies:
-  pedantic: ^1.8.0
+  pedantic: ^1.10.0
   flutter_test:
     sdk: flutter
-  firebase_core: ">=0.8.0-1.0.nullsafety.1 <0.8.0-2.0.nullsafety.0"
+  firebase_core: ^0.8.0-nullsafety.1
   flutter_driver:
     sdk: flutter
   test: any
-  path: ^1.6.2
-  path_provider: ^1.6.11
-  e2e: ^0.6.1
+  path: ^1.8.0
+  path_provider: ^2.0.0-nullsafety.1
+  e2e: ^0.7.0+1
 
 flutter:
   plugin:
