--- a/packages/firebase_ml_vision/example/pubspec.yaml
+++ b/packages/firebase_ml_vision/example/pubspec.yaml
@@ -9,13 +9,13 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  image_picker: ^0.6.0
-  cupertino_icons: ^0.1.2
+  image_picker: ^0.7.0
+  cupertino_icons: ^1.0.2
   firebase_ml_vision:
     path: ../
   firebase_core:
     path: ../../firebase_core/firebase_core
-  camera: ^0.5.6+1
+  camera: ^0.8.0-nullsafety.1
 
 dependency_overrides:
   firebase_core:
@@ -24,19 +24,19 @@ dependency_overrides:
     path: ../../firebase_core/firebase_core_platform_interface
   firebase_core_web:
     path: ../../firebase_core/firebase_core_web
-  http: ^0.12.2
-  http_parser: ^4.0.0-nullsafety
+  http: ^0.13.0
+  http_parser: ^4.0.0
 
 dev_dependencies:
-  pedantic: ^1.8.0
-  e2e: ^0.6.1
+  pedantic: ^1.10.0
+  e2e: ^0.7.0
   flutter_test:
     sdk: flutter
   flutter_driver:
     sdk: flutter
   test: any
-  path: ^1.6.2
-  path_provider: ^1.6.11
+  path: ^1.8.0
+  path_provider: ^2.0.0-nullsafety.1
 
 flutter:
   uses-material-design: true
